infra/streaming/mssql-cdc-source-db/custom-resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql
spec:
  clusterIP: None
  selector:
    app: mssql
  ports:
    - port: 1433
      targetPort: 1433
      name: tcpsql
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-svc
spec:
  selector:
    app: mssql
  ports:
    - port: 1433
      targetPort: 1433
      name: tcpsql
