infra/streaming/mssql-cdc-source-db/custom-resources/ingress_route_tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mssql-cdc-source-db-route
spec:
  entryPoints:
    - mssql-cdc-source-db
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mssql
          port: 1433
